<resources>
    <string name="app_name">TheKitchen</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="Register_Here">Register Here</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="Register">Register</string>
    <string name="title_activity_user_drawer">UserDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="open" />
    <string name="close" />
    <string name="recipe_feed">Recipe Feed</string>
    <string name="favorites">Favorite Recipes</string>
    <string name="shop_list">Shopping List</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_main_navigation">main_navigation</string>
    <string name="Recipes">Recipes</string>
    <string name="drawer_open" />
    <string name="drawer_close" />
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="title_activity_kitchen_drawer">kitchen_drawer</string>
    <string name="title_activity_kitch_draw">KitchDraw</string>
    <string name="title_activity_main_nav">main_nav</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="mainAccount">My Account</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="title_activity_create_recipe">create_recipe</string>
    <string name ="recipe_name">Recipe Name</string>
<string name = "servings">Servings</string>
    <string name = "cook_time">Cook time in minutes</string>
    <string name = "ingredients">Ingredients</string>
    <string name = "preparation">Preparation</string>
<string name = "submit_recipe">Submit Recipe</string>
    <string name = "change_email">Change Email</string>
    <string name = "change_password">Change Password</string>

</resources>
