<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainAccount"
            android:icon="@mipmap/ic_account_box_black_24dp"
            android:title="My Account" />
        <item
            android:id="@+id/recipeFeed"
            android:icon="@mipmap/ic_list_black_24dp"
            android:title="@string/recipe_feed" />
        <item

            android:id="@+id/Favorites"
            android:icon="@mipmap/ic_favorite_black_24dp"
            android:title="@string/favorites" />
        <item

            android:id="@+id/ShopList"
            android:icon="@mipmap/ic_shopping_cart_black_24dp"
            android:title="@string/shop_list" />

        <item
            android:id="@+id/Settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />

        <item

            android:id="@+id/LogOut"
            android:title="@string/log_out" />

    </group>


</menu>
